feat: repozicování obsahu pod fixním menu

--- a/src/less/base.less
+++ b/src/less/base.less
@@ -16,12 +16,21 @@
 
 // původní sticky moc nefunguje, skáče a je zde zbytečné
 #top-menu {
+    // height: 4rem
     position: fixed !important;
 }
 
 // kvůli fixed na #top-menu
 #easy_page_tabs {
-    margin: 5rem 2.4rem 0;
+    margin-top: 5rem !important;
+}
+
+#header {
+    padding-top: 5.5rem !important;
+}
+
+.easy-content-page {
+    margin-top: 4rem !important;
 }
 
 /**
