--- a/src/less/theme-dark.less
+++ b/src/less/theme-dark.less
@@ -344,17 +344,52 @@ table.list tr.group td.group-name > :nth-child(3) {
 }
 
 /**
- * Kalendáře a 'today'
+ * Kalendáře
  */
-.fc-state-highlight,
+
+div.easy-attendance {
+    border: 1px solid @border-color;
+}
+
+div.easy-attendance-calendar-item > a {
+    text-align: left; // typo fix
+    color: @text-tw !important;
+}
+
+
+div.easy-calendar table td {
+    background: @primary-light-bg;
+}
+
+div.easy-calendar table td.odd,
+div.easy-calendar table td.weekend {
+    background: @primary-dark-bg;
+}
+
+div.easy-calendar table td.week-number,
+div.easy-calendar table td.day-number,
+div.easy-calendar table td.month-number,
+div.easy-calendar table td.week-total {
+    background: @primary-dark-bg;
+    border-right: 1px solid @border-color !important;
+}
+
+// table thead td,
+// table thead th {
+//     border-bottom: 1px solid @bg-tw-border;
+// }
+
+div.easy-calendar table {
+    border-bottom: 1px solid @border-color;
+}
+
+div.easy-calendar table tbody td + td {
+    border-left: 1px solid @border-color;
+}
+
+// today
 div.easy-calendar table td.today {
-    background: repeating-linear-gradient(
-        45deg,
-        #d7f2fa,
-        #d7f2fa 1px,
-        #fff 1px,
-        #fff 2px
-    );
+    background: @primary-bg;
 }
 
 /**
