fix: oprava layoutu "Editace času"

--- a/src/less/base.less
+++ b/src/less/base.less
@@ -376,8 +376,8 @@ div.easy-attendance-calendar-item > a {
  * Zrušení 2 sloupců na modalu "Zápis času"
  */
 
-// Konkrétní modal
-#bulk-time-entry-form {
+// Konkrétní modal (nutný selector na ui modal)
+.ui-dialog #bulk-time-entry-form {
     .splitcontent {
         display: block !important; // flex
     }
