fix: pozadí sidebar tlačítek

--- a/src/less/theme-dark.less
+++ b/src/less/theme-dark.less
@@ -145,10 +145,10 @@ table.list .group > td.inline_expander {
     color: @text-tw-dark;
 }
 
-// Tlačítka po update mají vlastní barvu, původně transparent
+// Tlačítka po update mají vlastní barvu
 #easy_grid_sidebar_inner > .primary-actions .button-positive.button-outlined,
 #sidebar_inner > .primary-actions .button-positive.button-outlined {
-    background-color: transparent !important;
+    background-color: @primary-dark-bg !important;
 }
 
 // Spodní část, obsahuje buttony
