--- a/src/less/theme-dark.less
+++ b/src/less/theme-dark.less
@@ -855,3 +855,64 @@ table.list th.author .avatar-container + span a {
 .easy-issue-timers-item {
     border: 1px solid @border-color !important;
 }
+
+/**
+ * Tooltipy
+ */
+.journal-tools .menu-more ul li > .menu-children,
+.message-tools .menu-more ul li > .menu-children,
+.menu--tooltip ul li > .menu-children,
+.button-group .menu-more ul li > .menu-children,
+#context-menu ul li > .menu-children,
+.main_menu__settings ul li > .menu-children,
+.main_menu__more ul li > .menu-children,
+#top-menu-container > ul > li ul li > .menu-children,
+#top-menu-rich-more .top-menu-rich-more-item > li:hover ul li > .menu-children,
+#top-menu-rich-more .top-menu-rich-more-item > li.open ul li > .menu-children,
+.menu-user-profile > li ul li > .menu-children,
+.easy-gantt__menu-group--tooltiped ul li > .menu-children,
+#top-menu-rich-more .top-menu-rich-more-item > li > ul.menu-children,
+.journal-tools > a > .tooltip,
+.message-tools > a > .tooltip,
+.list-item-actions a > .tooltip,
+table.list .easy-query-additional-ending-buttons a > .tooltip,
+table.list .easy-query-additional-ending-buttons > span > .tooltip,
+table.list .easy-additional-ending-buttons a > .tooltip,
+table.list .easy-additional-ending-buttons > span > .tooltip,
+legend a.icon > .tooltip,
+.input-append > a > .tooltip,
+.box .module-heading-links a > .tooltip,
+.easy-query-heading-controls a > .tooltip,
+.tooltip-left > .tooltip,
+.easy-entity-details .easy-contextual a > .tooltip,
+.easy-entity-card-actions a > .tooltip,
+.row-control > .expander > .tooltip,
+.row-control > .expander-root > .tooltip,
+.row-control > .expander-descendant > .tooltip,
+div.easy-calendar table td .day-num > .tooltip,
+div > .fc-grid .fc-day-number > .tooltip,
+.easy-query-heading-wrapper > .tooltip,
+.tooltip-bottom > .tooltip,
+.tooltip-parent > .tooltip,
+.agile__col-sort > .tooltip,
+#invited_colleague_change_user_type_modal .icon-help-bubble > .tooltip,
+.journal-tools .menu-more ul,
+.message-tools .menu-more ul,
+.menu--tooltip ul,
+.button-group .menu-more ul,
+#context-menu ul,
+.main_menu__settings ul,
+.main_menu__more ul,
+#top-menu-container > ul > li ul,
+#top-menu-rich-more .top-menu-rich-more-item > li:hover ul,
+#top-menu-rich-more .top-menu-rich-more-item > li.open ul,
+.menu-user-profile > li ul,
+.easy-gantt__menu-group--tooltiped ul,
+table.list td.assigned_to .avatar-container + span,
+table.list td.author .avatar-container + span,
+table.list th.assigned_to .avatar-container + span,
+table.list th.author .avatar-container + span,
+.tooltip-content,
+[aria-describedby="invited_colleague_onboard_modal"] .tooltip {
+    color: @text-tw-dark;
+}
